# Spio

./: .clang-format  .gitignore  CMakeLists.txt  DEPENDENCY-USAGE.md  LICENSE-POLICY.md  README.md
.githooks/: pre-commit
contracts/: README.md
docs/: BUILD-AND-DEV-ENV.md  INDEX.md  README.md
scripts/: README.md  artifact-policy-rsync-excludes.py  artifact-policy.json  artifact_policy.py  audit-gate.sh  bootstrap-check.py  bootstrap-dev-env.sh  check_no_binaries.py  checkpoint-health.sh  cloud-compile-stress.py  copy-to-external-repo.sh  delivery-gate.py  delivery-gate.sh  docs-audit.py  docs-index.py  docs-lifecycle.py  ecosystem-cli-doc-gate.py  ecosystem-product-gate.py  ecosystem-sample-workflow-gate.py  extractability-check.sh  install-git-hooks.sh  install-pafio.sh  install-spio.sh  native-check.sh  pafio  pafio-hosted-serve.py  perf-gate.py  preflight-readiness-check.py  registry-promote.py  registry-server-gate.py  registry-v2-control-plane-server.py  registry-v2-keygen.py  registry-v2-publish.py  registry-v2-verify.py  repo-hygiene-check.py  (+7 more)
src/: CMakeLists.txt  README.md  main.cpp
src/PafioApp/: CloudApp.cpp  CloudApp.hpp  PackageApp.cpp  PackageApp.hpp  ToolApp.cpp  ToolApp.hpp  WorkflowApp.cpp  WorkflowApp.hpp
src/PafioCLI/: CLI.cpp  CLI.hpp  MachineInfoContract.cpp  MachineInfoContract.hpp  Support.cpp  Support.hpp
src/PafioCloud/: Contract.cpp  Contract.hpp  Execution.cpp  Execution.hpp  Job.cpp  Job.hpp
src/PafioCompat/: Compat.cpp  Compat.hpp
src/PafioCore/: Errors.hpp  Paths.cpp  Paths.hpp  Process.cpp  Process.hpp  Sha256.cpp  Sha256.hpp  Version.hpp
src/PafioManifest/: Lockfile.cpp  Lockfile.hpp  Manifest.cpp  Manifest.hpp
src/PafioPack/: Pack.cpp  Pack.hpp
src/PafioPlan/: CompilePlan.cpp  CompilePlan.hpp
src/PafioPublish/: Publish.cpp  Publish.hpp
src/PafioRegistryClient/: Client.cpp  Client.hpp  README.md
src/PafioResolve/: ProjectGraphContract.cpp  ProjectGraphContract.hpp  Resolver.cpp  Resolver.hpp
src/PafioSecurity/: RegistrySecurity.cpp  RegistrySecurity.hpp  RegistryTrust.cpp  RegistryTrust.hpp
src/PafioTool/: Contract.cpp  Contract.hpp  Install.cpp  Install.hpp
src/PafioToolchain/: SourceBuild.cpp  SourceBuild.hpp  State.cpp  State.hpp  Vocabulary.hpp
src/PafioTree/: Render.cpp  Render.hpp
src/PafioVendor/: Vendor.cpp  Vendor.hpp
src/PafioWorkflow/: Dependencies.cpp  Dependencies.hpp
src/SpioApp/: CloudApp.cpp  CloudApp.hpp  PackageApp.cpp  PackageApp.hpp  ToolApp.cpp  ToolApp.hpp  WorkflowApp.cpp  WorkflowApp.hpp
src/SpioCLI/: CLI.cpp  CLI.hpp  MachineInfoContract.cpp  MachineInfoContract.hpp  Support.cpp  Support.hpp
src/SpioCloud/: Contract.cpp  Contract.hpp  Execution.cpp  Execution.hpp  Job.cpp  Job.hpp
src/SpioCompat/: Compat.cpp  Compat.hpp
src/SpioCore/: Errors.hpp  Paths.cpp  Paths.hpp  Process.cpp  Process.hpp  Sha256.cpp  Sha256.hpp  Version.hpp
src/SpioManifest/: Lockfile.cpp  Lockfile.hpp  Manifest.cpp  Manifest.hpp
src/SpioPack/: Pack.cpp  Pack.hpp
src/SpioPlan/: CompilePlan.cpp  CompilePlan.hpp
src/SpioPublish/: Publish.cpp  Publish.hpp
src/SpioRegistryClient/: Client.cpp  Client.hpp  README.md
src/SpioRegistryServer/: FilesystemPublish.cpp  Publish.hpp  README.md  RemotePublish.cpp
src/SpioResolve/: ProjectGraphContract.cpp  ProjectGraphContract.hpp  Resolver.cpp  Resolver.hpp
src/SpioSecurity/: RegistrySecurity.cpp  RegistrySecurity.hpp  RegistryTrust.cpp  RegistryTrust.hpp
src/SpioTool/: Contract.cpp  Contract.hpp  Install.cpp  Install.hpp
src/SpioToolchain/: SourceBuild.cpp  SourceBuild.hpp  State.cpp  State.hpp  Vocabulary.hpp
src/SpioTree/: Render.cpp  Render.hpp
src/SpioVendor/: Vendor.cpp  Vendor.hpp
src/SpioWorkflow/: Dependencies.cpp  Dependencies.hpp
src/pafio_bootstrap/: __init__.py  cli.py  compat.py  project.py  validation.py
src/pafio_cloud_stress/: __init__.py  cli.py  runner.py
src/pafio_registry_v2/: __init__.py  common.py  keygen.py  publisher.py  validator.py
src/spio_bootstrap/: __init__.py  cli.py  compat.py  project.py  validation.py
src/spio_cloud_stress/: __init__.py  runner.py
src/spio_registry_v2/: __init__.py  common.py  publisher.py  validator.py
tests/: CMakeLists.txt  README.md
tests/integration/: README.md
tests/integration/fixtures/: README.md
tests/integration/scripts/: run-blackbox-placeholder.sh
tests/interop/: hosted-control-plane-contract-gate.py  native-contract-source-gate.py  pafio-installer-bootstrap-smoke.sh  registry-control-plane-contract-gate.py  registry-http-fetch.sh  registry-http-publish.sh  registry-http-server.py  registry-server-gate.sh  registry-split-origin-http.sh  registry-split-origin-promotion.sh  registry-v2-contract-gate.py  registry-v2-control-plane-http.sh  registry-v2-http-read.sh  registry-v2-publish.sh  spio-installer-bootstrap-smoke.sh  styio-interface-gate-compile-plan.sh  styio-interface-gate-handshake.sh
tests/native/: BuildCloudTests.cpp  BuildPlanTests.cpp  BuildTestSupport.hpp  BuildTests.cpp  BuildWorkflowCliTests.cpp  LockTests.cpp  ManifestTests.cpp  PackTests.cpp  ProcessTests.cpp  ProjectGraphTests.cpp  PublishTests.cpp  RunAndTestCliTests.cpp  SecurityTests.cpp  SyncTests.cpp  ToolInstallTests.cpp  ToolPinTests.cpp  ToolStatusTests.cpp  ToolTestSupport.hpp  ToolTests.cpp  ToolchainStateTests.cpp  VendorTests.cpp
tests/perf/: baseline.json
tests/unit/: README.md  test_artifact_policy.py  test_bootstrap.py  test_check_no_binaries.py  test_cloud_compile_stress.py  test_delivery_gate.py  test_perf_gate.py  test_registry_v2.py  test_repo_hygiene_check.py  test_submit_gate.py
tests/unit/fixtures/: README.md
tests/unit/fixtures/manifests/bad-missing-manifest-version/: pafio.toml  spio.toml
tests/unit/fixtures/manifests/bad-multi-source-dependency/: pafio.toml  spio.toml
tests/unit/fixtures/manifests/bad-package-name/: pafio.toml  spio.toml
tests/unit/fixtures/manifests/ok-path-and-git/: pafio.toml  spio.toml
tests/unit/fixtures/manifests/ok-single-package/: pafio.toml  spio.toml
tests/unit/fixtures/manifests/ok-workspace-root/: pafio.toml  spio.toml
(+197 files in other folders)
